--- a/vector/vector_clickhouse.yaml
+++ b/vector/vector_clickhouse.yaml
@@ -13,8 +13,8 @@ transforms:
     source: |
       . = parse_json!(.message)
       .DateTime_vector = to_int!(format_timestamp!(now(), format: "%s"))
-      .event_timestamp = format_timestamp!(parse_timestamp!(.event_timestamp, format: "%Y-%m-%dT%H:%M:%S.%f"),format: "%Y-%m-%dT%H:%M:%S")
-
+      # .event_timestamp = format_timestamp!(parse_timestamp!(.event_timestamp, format: "%Y-%m-%dT%H:%M:%S.%f"),format: "%Y-%m-%dT%H:%M:%S")
+      .event_timestamp = parse_timestamp!(.event_timestamp,format: "%Y-%m-%d %H:%M:%S")
 
 sinks:
   clickhouse_sink:
@@ -33,5 +33,3 @@ sinks:
     skip_unknown_fields: true
     healthcheck:
       enabled: false
-
-
