--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -252,6 +252,18 @@ services:
       - clickhouse-cluster-network
     restart: unless-stopped
 
+  ksqldb-server:
+    image: confluentinc/ksqldb-server:latest
+    container_name: ksqldb-server
+    ports:
+      - "8088:8088"
+    environment:
+      KSQL_CONFIG_DIR: "/etc/ksql"
+      KSQL_BOOTSTRAP_SERVERS: "kafka1:9092,kafka2:9092,kafka3:9092"
+      KSQL_LISTENERS: "http://0.0.0.0:8088"
+      # Другие настройки, если нужно
+    networks:
+      - kafka-network
   #Сервис для генерации событий (producer)
   event_generator:
     build: ./event_generator
